--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -1,7 +1,7 @@
 background: bg/navy.png
 transition: slide
 mathjax : TeX-AMS_HTML-full
-theme: black
+theme: white
 footnote: "© 2017 YourName All Rights Reserved."
 theme-override: assets/PITCHME.css
 
