--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -4,4 +4,4 @@ mathjax : TeX-AMS_HTML-full
 theme: black
 footnote: "© 2017 YourName All Rights Reserved."
 theme-override: assets/PITCHME.css
-
+charts : true
