--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -5,3 +5,4 @@ theme: black
 footnote: "© 2017 YourName All Rights Reserved."
 theme-override: assets/PITCHME.css
 charts : true
+slide-number: true
